--- a/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
@@ -10,6 +10,8 @@
 		<!--
 		<script> 태그는 Java Script 와 같은 스크립트 명령문 작성을 알리는 역할을 수행한다. (즉, 해당 태그를 활용하면 HTML 문서 내부에 
 		스크립트 명령문을 작성하거나 외부 파일에 작성 된 스크립트 명령문을 가져오는 것이 가능하다.)
+
+		따라서, <script> 태그 영역에 작성되는 명령문은 HTML 문법과는 다른 문법을 지닌다는 것을 알 수 있다.
 		-->
 		<script>
 			/*
@@ -33,14 +35,33 @@
 			또한, var 키워드로 선언 된 변수는 호이스팅 기능을 지원하지만 let 키워드로 선언 된 변수는 호이스팅 기능을 지원하지 않기 때문에
 			선언되지 않는 변수를 사용하는 실수를 줄이는 것이 가능하다. (즉, let 키워드는 var 키워드에 비해 좀 더 안전하게 변수를 선언하는
 			것이 가능하다는 것을 알 수 있다.)
+
+			자료형이란?
+			- 데이터를 해석하는 방법을 의미한다. (즉, 동일한 형태의 데이터라고 하더라도 자료형에 의해서 처리되는 방법이 달라 질 수 있다는
+			것을 의미한다.)
+
+			Java Script 자료형 종류
+			- 숫자 (정수, 실수)
+			- 논리
+			- 문자열
+			- 객체 (배열, 리터널 객체 등등...)
 			*/
 			let nVal = 10;
 			let fVal = 3.14;
-			let oStr = "Hello, World!"
+			let oStr = "Hello, World!";
 
-			document.write("<p>정수 : " + nVal + "</p>")
-			document.write("<p>실수 : " + fVal + "</p>")
-			document.write("<p>문자열 : " + oStr + "</p>")
+			/*
+			문자열 데이터와 다른 데이터를 합칠 경우 하나의 문자열로 결합 된다는 것을 알 수 있다.
+
+			Ex)
+			"A" + 10	=> "A10"
+			"B" + 3.14	=> "B3.14"
+
+			document.write 는 문자열을 웹 브라우저 상에 출력하는 역할을 수행한다.
+			*/
+			document.write("<p>정수 : " + nVal + "</p>");
+			document.write("<p>실수 : " + fVal + "</p>");
+			document.write("<p>문자열 : " + oStr + "</p>");
 
 			/*
 			상수란?
@@ -49,7 +70,7 @@
 			단, 변수와 달리 데이터가 설정되고 나면 더이상 변경하는 것은 불가능하고 읽어들이는 것만 가능하다는 차이점이 존재한다. (즉, 상수는 
 			프로그램이 실행 중에 함부로 변경되면 안되는 민감한 데이터를 제어 할 때 활용된다는 것을 알 수 있다.)
 
-			또한, 상수에 데이터를 설정하는 것은 초기화 시점에만 가능하기 때문에 상수는 선언 시 반드시 특정 데이터를 설정해줘야한다.
+			또한, 상수에 데이터를 설정하는 것은 초기화 시점에만 가능하기 때문에 상수는 선언 시 반드시 특정 데이터를 할당해줘야한다.
 			(즉, 상수가 선언되고 나면 더이상 데이터를 변경하는 것이 불가능하다는 것을 알 수 있다.)
 
 			Java Script 상수 선언 방법
@@ -59,9 +80,11 @@
 			const nVal = 0;
 			*/
 			const nConstVal = 10;
-			document.write("<br><p>상수 : " + nConstVal + "</p>")
+			document.write("<br><p>상수 : " + nConstVal + "</p>");
 
-			/* 상수는 데이터를 변경하는 것이 불가능하기 때문에 아래 명령문은 문법 에러가 발생한다는 것을 알 수 있다. */
+			/*
+			상수는 데이터를 변경하는 것이 불가능하기 때문에 아래 명령문은 문법 에러가 발생한다는 것을 알 수 있다.
+			*/
 			// nConstVal = 20;
 		</script>
 	</body>
