--- a/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
@@ -29,16 +29,16 @@
 			var 키워드 vs let 키워드
 			- 두 키워드 모두 변수를 선언하는 역할을 한다.
 
-			var 키워드는 동일한 이름을 지니는 변수를 선언해도 문법 에러가 발생하지 않는 반면 let 키워드는 문법 에러가 발생하는 차이점이 
+			var 키워드는 동일한 이름을 지니는 변수를 선언해도 문법 에러가 발생하지 않는 반면 let 키워드는 문법 에러가 발생하는 차이점이
 			존재한다. (즉, let 키워드는 일반적인 프로그래밍 언어가 지니는 변수 선언 규칙을 따른다는 것을 알 수 있다.)
 
-			또한, var 키워드로 선언 된 변수는 호이스팅 기능을 지원하지만 let 키워드로 선언 된 변수는 호이스팅 기능을 지원하지 않기 때문에
-			선언되지 않는 변수를 사용하는 실수를 줄이는 것이 가능하다. (즉, let 키워드는 var 키워드에 비해 좀 더 안전하게 변수를 선언하는
-			것이 가능하다는 것을 알 수 있다.)
+			또한, var 키워드로 선언 된 변수는 호이스팅 기능을 지원하지만 let 키워드로 선언 된 변수는 호이스팅 기능을 지원하지 않기 때문에 
+			선언되지 않는 변수를 사용하는 실수를 줄이는 것이 가능하다. (즉, let 키워드는 var 키워드에 비해 좀 더 안전하게 변수를 선언하는 것이 
+			가능하다는 것을 알 수 있다.)
 
 			자료형이란?
-			- 데이터를 해석하는 방법을 의미한다. (즉, 동일한 형태의 데이터라고 하더라도 자료형에 의해서 처리되는 방법이 달라 질 수 있다는
-			것을 의미한다.)
+			- 데이터를 해석하는 방법을 의미한다. (즉, 동일한 형태의 데이터라고 하더라도 자료형에 의해서 처리되는 방법이 달라 질 수 있다는 것을 
+			의미한다.)
 
 			Java Script 자료형 종류
 			- 숫자 (정수, 실수)
@@ -70,8 +70,8 @@
 			단, 변수와 달리 데이터가 설정되고 나면 더이상 변경하는 것은 불가능하고 읽어들이는 것만 가능하다는 차이점이 존재한다. (즉, 상수는 
 			프로그램이 실행 중에 함부로 변경되면 안되는 민감한 데이터를 제어 할 때 활용된다는 것을 알 수 있다.)
 
-			또한, 상수에 데이터를 설정하는 것은 초기화 시점에만 가능하기 때문에 상수는 선언 시 반드시 특정 데이터를 할당해줘야한다.
-			(즉, 상수가 선언되고 나면 더이상 데이터를 변경하는 것이 불가능하다는 것을 알 수 있다.)
+			또한, 상수에 데이터를 설정하는 것은 초기화 시점에만 가능하기 때문에 상수는 선언 시 반드시 특정 데이터를 할당해줘야한다. (즉, 상수가 
+			선언되고 나면 더이상 데이터를 변경하는 것이 불가능하다는 것을 알 수 있다.)
 
 			Java Script 상수 선언 방법
 			- const + 상수 이름
