--- a/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
@@ -10,8 +10,8 @@
 		<script>
 			/*
 			반복문이란?
-			- 특정 조건을 만족 할 동안 명령문의 일부 또는 전체를 반복해서 실행하는 기능을 의미한다. (즉, 반복문을 활용하면 지속적으로 실행되는
-			프로그램을 제작하는 것이 가능하다.)
+			- 주어진 조건을 만족 할 동안 명령문의 일부 또는 전체를 반복해서 실행하는 기능을 의미한다. (즉, 반복문을 활용하면 특정 조건을 만족
+			할 동안 지속적으로 실행되는 프로그램을 제작하는 것이 가능하다.)
 
 			Java Script 반복문 종류
 			- while
