--- a/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
@@ -11,7 +11,7 @@
 			/*
 			연산자란?
 			- 프로그램이 동작하는데 필요한 데이터를 제어하기 위한 특별한 의미를 지니는 기호 (심볼) 을 의미한다. (즉, 연산자를 활용하면 
-			프로그램의 목적에 데이터를 제어하는 것이 가능하다.)
+			프로그램의 목적에 맞게 데이터를 제어하는 것이 가능하다.)
 
 			Java Script 연산자 종류
 			- 산술 연산자 (+, -, *, /, %)
@@ -22,10 +22,10 @@
 			- 기타 연산자 (형 변환 연산자, 조건 연산자 등등...)
 
 			prompt 함수란?
-			- 사용자로부터 문자열 데이터를 입력 받는 역할을 수행한다. (즉, 해당 함수를 활용하면 프로그램이 실행 중 필요한 데이터를 입력 받는
+			- 사용자로부터 문자열 데이터를 입력 받는 역할을 수행한다. (즉, 해당 함수를 활용하면 프로그램이 실행 중 필요한 데이터를 입력 받는 
 			것이 가능하다.)
 
-			해당 함수를 통해서 입력 받을 수 있는 데이터는 문자열이기 때문에 정수와 같은 숫자 데이터를 입력 받기 위해서는 입력 받은 문자열을
+			해당 함수를 통해서 입력 받을 수 있는 데이터는 문자열이기 때문에 정수와 같은 숫자 데이터를 입력 받기 위해서는 입력 받은 문자열을 
 			형 변환 연산자 등을 이용해서 숫자 데이터로 변환해 줄 필요가 있다. (Ex. Number 함수 사용 등등...)
 			*/
 			let oTokens = prompt("정수 (2 개) 입력").split(" ");
