--- a/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
@@ -36,6 +36,21 @@
 			let i = 0;
 
 			while(i < nNumVals) {
+				// 홀수 일 경우
+				if((i + 1) % 2 != 0) {
+					i += 1;
+
+					/*
+					continue 키워드란?
+					- 반복문 내부에서 사용 가능하며 현재 프로그램의 흐름을 생략하고 다음 흐름으로 이동 시키는 역할을 수행한다.
+
+					따라서, while 및 do ~ while 반복문 내부에서 사용 할 경우에는 반드시 반복을 끝내기 위한 명령문이 실행 되었는지 확인 할
+					필요가 있다. (즉, continue 키워드가 실행 되지 전에 반복을 끝내기 위한 명령문이 실행 되지 않았을 경우 의도치 않게 무한
+					루프에 빠진다는 것을 알 수 있다.)
+					*/
+					continue;
+				}
+
 				document.write(`${i + 1}, `);
 				i += 1;
 			}
