--- a/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_03/E01Example_03.html
@@ -82,6 +82,15 @@
 			document.write(`<p>~${nVal01} = ${~nVal01}</p>`);
 			document.write(`<p>${nVal01} << 1 = ${nVal01 << 1}</p>`);
 			document.write(`<p>${nVal02} >> 1 = ${nVal02 >> 1}</p>`);
+
+			/*
+			조건 연산자는 Java Script 연산자 중 유일하게 피 연산자가 3 개 필요하기 때문에 삼항 연산자라고도 불린다. (즉, 해당 연산자를
+			제외하면 단항 연산자와 이항 연산자를 지원한다는 것을 알 수 있다.)
+			*/
+			let nResult = (nVal01 > nVal02) ? nVal01 : nVal02;
+
+			document.write("<br><p>=====> 조건 연산자 <=====</p>");
+			document.write(`<p>(${nVal01} > ${nVal02}) ? ${nVal01} : ${nVal02} = ${nResult}`);
 		</script>
 	</body>
 </html>
