--- a/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
@@ -73,6 +73,10 @@
 			
 			switch ~ case 조건문은 조건을 만족하는 case 만을 실행하는 것이 아니라 조건을 만족하는 case 부터 프로그램의 흐름을 진행시키기
 			때문에 조건을 만족하는 case 만을 실행하기 위해서는 반드시 break 키워드를 사용해서 프로그램의 흐름을 제어 할 필요가 있다.
+
+			parseInt 함수란?
+			- 입력으로 주어진 숫자 중 소수점을 버리고 정수 파트만을 반환하는 역할을 수행한다. (즉, 해당 함수를 활용하면 소수점을 버리고
+			정수만을 가지고 연산을 수행하는 곳에 사용하는 것이 가능하다.)
 			*/
 			switch(parseInt(nScore / 10)) {
 				case 9: case 10: document.write("<p>A 학점입니다.</p>"); break;
