--- a/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_02/E01Example_02.html
@@ -59,9 +59,9 @@
 
 			document.write 는 문자열을 웹 브라우저 상에 출력하는 역할을 수행한다.
 			*/
-			document.write("<p>정수 : " + nVal + "</p>");
-			document.write("<p>실수 : " + fVal + "</p>");
-			document.write("<p>문자열 : " + oStr + "</p>");
+			document.write("정수 : " + nVal + "<br>");
+			document.write("실수 : " + fVal + "<br>");
+			document.write("문자열 : " + oStr + "<br>");
 
 			/*
 			상수란?
@@ -80,7 +80,7 @@
 			const nVal = 0;
 			*/
 			const nConstVal = 10;
-			document.write("<br><p>상수 : " + nConstVal + "</p>");
+			document.write("<br>상수 : " + nConstVal + "<br>");
 
 			/*
 			상수는 데이터를 변경하는 것이 불가능하기 때문에 아래 명령문은 문법 에러가 발생한다는 것을 알 수 있다.
