--- a/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_05/E01Example_05.html
@@ -109,7 +109,7 @@
 			실행된다는 차이점이 존재한다.
 			*/
 			do {
-				document.write("<p>Hello, World!</p>");
+				document.write("Hello, World!<br>");
 			} while(false);
 		</script>
 	</body>
