--- a/Framework/Web/Example/E01/Example/Classes/Example_06/E01Example_06.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_06/E01Example_06.html
@@ -72,10 +72,10 @@
 			let fDivideVal = GetDivideVal(nVal01, nVal02);
 
 			document.write("<p>=====> 결과 <=====</p>");
-			document.write(`<p>${nVal01} + ${nVal02} = ${nSumVal}</p>`);
-			document.write(`<p>${nVal01} - ${nVal02} = ${nSubVal}</p>`);
-			document.write(`<p>${nVal01} * ${nVal02} = ${nMultiplyVal}</p>`);
-			document.write(`<p>${nVal01} / ${nVal02} = ${fDivideVal}</p>`);
+			document.write(`${nVal01} + ${nVal02} = ${nSumVal}<br>`);
+			document.write(`${nVal01} - ${nVal02} = ${nSubVal}<br>`);
+			document.write(`${nVal01} * ${nVal02} = ${nMultiplyVal}<br>`);
+			document.write(`${nVal01} / ${nVal02} = ${fDivideVal}<br>`);
 		</script>
 	</body>
 </html>
