--- a/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_04/E01Example_04.html
@@ -42,23 +42,23 @@
 
 			// F 학점 일 경우
 			if(nScore < 60) {
-				document.write("<p>F 학점입니다.</p>");
+				document.write("F 학점입니다.<br>");
 			} else {
 				// A 학점 일 경우
 				if(nScore >= 90) {
-					document.write("<p>A 학점입니다.</p>");
+					document.write("A 학점입니다.<br>");
 				}
 				// B 학점 일 경우
 				else if(nScore >= 80) {
-					document.write("<p>B 학점입니다.</p>");
+					document.write("B 학점입니다.<br>");
 				}
 				// C 학점 일 경우
 				else if(nScore >= 70) {
-					document.write("<p>C 학점입니다.</p>");
+					document.write("C 학점입니다.<br>");
 				}
 				// D 학점 일 경우
 				else {
-					document.write("<p>D 학점입니다.</p>");
+					document.write("D 학점입니다.<br>");
 				}
 			}
 
@@ -79,11 +79,11 @@
 			정수만을 가지고 연산을 수행하는 곳에 사용하는 것이 가능하다.)
 			*/
 			switch(parseInt(nScore / 10)) {
-				case 9: case 10: document.write("<p>A 학점입니다.</p>"); break;
-				case 8: document.write("<p>B 학점입니다.</p>"); break;
-				case 7: document.write("<p>C 학점입니다.</p>"); break;
-				case 6: document.write("<p>D 학점입니다.</p>"); break;
-				default: document.write("<p>F 학점입니다.</p>"); break;
+				case 9: case 10: document.write("A 학점입니다.<br>"); break;
+				case 8: document.write("B 학점입니다.<br>"); break;
+				case 7: document.write("C 학점입니다.<br>"); break;
+				case 6: document.write("D 학점입니다.<br>"); break;
+				default: document.write("F 학점입니다.<br>"); break;
 			}
 		</script>
 	</body>
