--- a/Framework/Web/Example/E01/Example/Classes/Example_01/E01Example_01.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_01/E01Example_01.html
@@ -1,7 +1,7 @@
 <!---
 태그란?
-- HTML 문법 중 가장 작은 단위로서 웹 페이지 구성 요소 (텍스트, 이미지 등등...) 를 정의하는 역할을 수행한다. 또한, 태그는 종류에 따라 속성을 
-지닐 수 있으며 속성을 통해 여러 부가 정보를 명시하는 것이 가능하다.
+- HTML 문법 중 가장 작은 단위로서 웹 페이지 구성 요소 (텍스트, 이미지 등등...) 를 정의하는 역할을 수행한다. 
+또한, 태그는 종류에 따라 속성을 지닐 수 있으며 속성을 통해 여러 부가 정보를 명시하는 것이 가능하다.
 
 HTML 은 태그와 속성으로 이루어져 있으며 태그는 계층적인 구조를 지니기 때문에 각 태그는 부모, 자식 및 형제 개념을 지니고 있다. (즉, 태그는 
 내부적으로 트리 형태로 관리 된다는 것을 알 수 있다.)
