--- a/Framework/Web/Example/E01/Example/Classes/Example_07/E01Example_07.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_07/E01Example_07.html
@@ -22,8 +22,10 @@
 
 			배열 vs 딕셔너리
 			- 배열은 관리되고 있는 데이터의 순서가 존재하기 때문에 특정 위치에 존재하는 데이터에 접근하기 위해서 [ ] (인덱스 연산자) 와
-			인덱스 번호가 활용된다. 또한, 인덱스 번호는 0 ~ 배열 길이 - 1 의 범위를 지니고 있기 때문에 잘못된 인덱스 번호를 명시했을 경우
-			프로그램이 오작동 할 수 있기 때문에 주의가 필요하다.
+			인덱스 번호가 활용된다. 
+			
+			또한, 인덱스 번호는 0 ~ 배열 길이 - 1 의 범위를 지니고 있기 때문에 잘못된 인덱스 번호를 명시했을 경우 프로그램이 오작동 할 수 있기 
+			때문에 주의가 필요하다.
 
 			반면, 딕셔너리는 키/벨류 쌍으로 데이터를 관리하기 때문에 특정 데이터를 가져오기 위해서는 [ ] (인덱스 연산자) 와 해당 데이터의
 			키를 명시해줘야한다. (즉, 딕셔너리는 배열과 달리 데이터의 순서가 존재하지 않는다는 것을 알 수 있다.)
@@ -99,16 +101,16 @@
 			let oValDict01 = {};
 
 			/*
-			딕셔너리 또한 배열과 마찬가지로 선언과 동시에 초기화가 가능하다. 단, 딕셔너리는 키/벨류 쌍으로 데이터를 관리하기 때문에 초기화
-			값을 명시하기 위해서는 반드시 키와 벨류를 같이 명시해줘야한다.
+			딕셔너리 또한 배열과 마찬가지로 선언과 동시에 초기화가 가능하다. 
+			단, 딕셔너리는 키/벨류 쌍으로 데이터를 관리하기 때문에 초기화 값을 명시하기 위해서는 반드시 키와 벨류를 같이 명시해줘야한다.
 
 			키란?
 			- 데이터를 가져오기 위한 식별자를 의미한다. 키는 딕셔너리가 관리하고 있는 데이터마다 고유한 값을 지녀야하기 때문에 중복이
 			허용되지 않는다. (즉, 키는 벨류에 접근하기 위해서 필요한 데이터라는 것을 알 수 있다.)
 
 			벨류란?
-			- 컬렉션에 의해서 관리 할 데이터를 의미한다. 벨류는 딕셔너리에 의해서 실질적으로 관리되는 데이터이기 때문에 중복을 허용한다는
-			특징이 존재한다.
+			- 컬렉션에 의해서 관리 할 데이터를 의미한다. 
+			벨류는 딕셔너리에 의해서 실질적으로 관리되는 데이터이기 때문에 중복을 허용한다는 특징이 존재한다.
 			*/
 			let oValDict02 = {"Key_1":1, "Key_2":2, "Key_3":3};
 
