--- a/Framework/Web/Example/E01/Example/Classes/Example_06/E01Example_06.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_06/E01Example_06.html
@@ -34,9 +34,10 @@
 			/** 덧셈 결과를 반환한다 */
 			function GetSumVal(a_nVal01, a_nVal02) {
 				/*
-				return 키워드는 함수를 종료 시키고 프로그램의 흐름을 함수를 호출한 곳으로 이동 시키는 역할을 수행한다. 또한, 함수가 반환 값이
-				존재 할 경우 반환 할 데이터를 return 키워드와 같이 명시하면 해당 데이터를 함수를 호출한 곳으로 돌려주는 역할을 수행한다. (즉,
-				return 키워드와 같이 반환 값이 명시 되어있으면 해당 함수는 출력이 존재하는 함수라는 것을 알 수 있다.)
+				return 키워드는 함수를 종료 시키고 프로그램의 흐름을 함수를 호출한 곳으로 이동 시키는 역할을 수행한다. 
+				
+				또한, 함수가 반환 값이 존재 할 경우 반환 할 데이터를 return 키워드와 같이 명시하면 해당 데이터를 함수를 호출한 곳으로 돌려주는 
+				역할을 수행한다. (즉, return 키워드와 같이 반환 값이 명시 되어있으면 해당 함수는 출력이 존재하는 함수라는 것을 알 수 있다.)
 				*/
 				return a_nVal01 + a_nVal02;
 			}
@@ -62,9 +63,10 @@
 			let nVal02 = Number(oTokens[1]);
 
 			/*
-			특정 함수를 호출 (실행) 하고 싶다면 함수 이름을 명시 후 ( ) (함수 호출 연산자) 를 명시해주면 된다. 단, 함수가 입력 데이터를 필요로
-			할 경우 반드시 해당 함수가 요구하는 만큼 입력 데이터를 명시해 줄 필요가 있다. (즉, 함수가 2 개의 입력 데이터를 요구한다면 함수 호출
-			시 2 개의 데이터를 입력으로 전달 할 필요가 있다는 것을 알 수 있다.)
+			특정 함수를 호출 (실행) 하고 싶다면 함수 이름을 명시 후 ( ) (함수 호출 연산자) 를 명시해주면 된다. 
+			
+			단, 함수가 입력 데이터를 필요로 할 경우 반드시 해당 함수가 요구하는 만큼 입력 데이터를 명시해 줄 필요가 있다. (즉, 함수가 2 개의 
+			입력 데이터를 요구한다면 함수 호출시 2 개의 데이터를 입력으로 전달 할 필요가 있다는 것을 알 수 있다.)
 			*/
 			let nSumVal = GetSumVal(nVal01, nVal02);
 			let nSubVal = GetSubVal(nVal01, nVal02);
