--- a/Framework/Web/Example/E01/Example/Classes/Example_09/E01Example_09.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_09/E01Example_09.html
@@ -23,13 +23,20 @@
 		<!--
 		p 태그는 문단에 해당하는 텍스트를 표현할 때 주로 사용된다.
 		또한, p 태그는 블럭 요소에 해당하는 태그이기 때문에 해당 태그를 이용하면 여러 라인에 걸쳐서 텍스트를 작성하는 것이 가능하다.
+
+		블럭 요소란?
+		- 개행 태그를 사용하지 않더라도 자동으로 개행이 되는 태그를 의미한다. (즉, HTML 에는 개행 태그를 명시하지 않으면 자동으로 개행 되지
+		않는 태그도 존재하며 해당 태그를 인라인 요소라고 한다.)
 		-->
 		<p>하나의 문단을 작성할때는 p 태그를 사용합니다.</p>
 		<p>또한, p 태그는 블럭 요소 태그이기 때문에 자동으로 줄 바꿈이 되는 것을 알 수 있다.</p>
 
 		<!--
 		blockquote 태그는 출처에서 인용한 문단 단위의 텍스트를 작성할 때 사용된다.
-		이때, 출처가 확실한 인용문은 cite 속성을 통해 출처 경로를 명시하는 것이 가능하다.
+		또한, 출처가 확실한 인용문은 cite 속성을 통해 출처 경로를 명시하는 것이 가능하다.
+
+		blockquote 태그는 여러 라인에 걸쳐서 인용글을 표현하는 태그이기 때문에 반드시 1 개 이상의 p 태그를 포함하고 있어야한다. (즉, p 태그
+		내부 컨텐츠에는 blockquote 태그를 사용하는 것이 불가능하다는 것을 알 수 있다.)
 		-->
 		<blockquote cite="https://ko.wikipedia.org/wiki/HTML">
 			<p>
@@ -46,11 +53,18 @@
 			</p>
 		</blockquote>
 
+		<!--
+		q 태그는 짧은 인용글을 표현할 때 사용되는 태그이다. (즉, 해당 태그를 활용하면 특정 텍스트 중 일부가 인용글이라는 것을 강조하는 효과를
+		표현하는 것이 가능하다.)
+		-->
 		<p>
 			차세대 웹기술지원센터의 데이터에 따르면 <q cite="https://www.koreahtml5..kr/front/stats/browserUseStats.do">2021 년 대한민국에서 
 			가장 점유율이 높은 웹 브라우저는 구글의 크롬입니다.</q>
 		</p>
 
+		<!--
+		del 태그는 취소선을 표현할 때 사용되며 ins 태그는 밑줄을 표현할 때 사용된다.
+		-->
 		<p>세일 기간을 맞이하여 온라인 강의 수강권을 할인 된 금액 (정가 <del>36,000 원</del> <ins>20,000 원</ins>) 에 판매합니다.</p>
 	</body>
 </html>
