--- a/Framework/Web/Example/E01/Example/Classes/Example_09/E01Example_09.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_09/E01Example_09.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Example 9</title>
 	</head>
 	<body>
 		<!--
@@ -66,5 +67,31 @@
 		del 태그는 취소선을 표현할 때 사용되며 ins 태그는 밑줄을 표현할 때 사용된다.
 		-->
 		<p>세일 기간을 맞이하여 온라인 강의 수강권을 할인 된 금액 (정가 <del>36,000 원</del> <ins>20,000 원</ins>) 에 판매합니다.</p>
+
+		<!--
+		sub 태그는 아래 첨자를 표현할 때 사용되며 sup 태그는 위 첨자를 표현할 때 사용된다.
+		-->
+		<p>
+			공기의 원소 기호는 H<sub>2</sub>O<br>
+			4<sup>2</sup> 은 16 입니다.
+		</p>
+
+		<!--
+		strong 태그는 컨텐츠를 굵게 표현하는 역할을 수행한다. (즉, 해당 태그는 문단 중에 강조하고 싶은 텍스트가 있을 때 주로 활용된다는 것을
+		알 수 있다.)
+
+		strong 태그와 비슷한 역할을 하는 태그로는 b 태그가 있다.
+		b 태그는 과거 버전에서 많이 활용 되었지만 HTML 버전이 증가하면서 현재는 잘 쓰이지 않고 strong 태그를 좀 더 많이 쓰는 추세이다.
+		-->
+		<p>이 시설은 <strong>관계자 외 출입금지</strong>입니다.</p>
+
+		<!--
+		em 태그는 컨텐츠에 기울기를 적용하고 싶을 때 사용된다. (즉, 해당 태그는 strong 태그와 같은 특정 텍스트를 강조하고 싶을 때 활용된다는
+		것을 알 수 있다.)
+
+		em 태그와 비슷한 역할을 하는 태그로는 i 태그가 있다. (즉, i 태그도 b 태그와 마찬가지로 HTML 버전이 증가하면서 현재는 잘 쓰이지 않는
+		태그라는 것을 알 수 있다.)
+		-->
+		<p>여기서부터는 위험하니까 <em>절대로</em> 지나가지 마세요.</p>
 	</body>
 </html>
