--- a/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
@@ -7,6 +7,114 @@
 		<title>Example 13</title>
 	</head>
 	<body>
-		
+		<!--
+		폼이란?
+		- 사용자와 상호 작용을 일으키는 요소를 의미한다. (즉, 폼을 활용하면 사용자로부터 특정 데이터를 입력 받거나 입력 된 데이터를 서버에
+		전송함으로서 입력에 대한 결과를 처리하는 것이 가능하다.)
+
+		따라서, 폼에는 여러 종류가 존재하며 여러 폼을 조합함으로서 사용자와 상호 작용을 할 수 있는 웹 문서를 제작하는 것이 가능하다.
+
+		HTML 주요 폼 관련 태그
+		- input
+		- label
+		- fieldset
+		- textarea
+		- select
+		- button
+
+		폼 관련 태그는 모두 form 태그 내부에 작성 되어야한다.
+		또한, form 태그에는 action 속성과 method 속성을 지정하는 것이 가능하다.
+
+		action 속성이란?
+		- 사용자가 입력을 모두 완료 후 해당 데이터를 전달 받을 서버를 명시하는 역할을 수행한다. (즉, 해당 속성에 특정 서버의 URL 을 지정하면
+		해당 서버로 폼에 입력 된 데이터가 전송 된다는 것을 알 수 있다.)
+
+		method 속성이란?
+		- 입력 된 데이터를 서버에 전달하는 방법을 명시하는 역할을 수행한다. (즉, 해당 속성에 명시 된 값에 따라 보안 수준이 결정 된다는 것을
+		알 수 있다.)
+
+		데이터를 전달하는 방법에는 크게 get 방식과 post 방식이 존재하며 get 방식은 입력 된 데이터가 URL 에 노출되기 때문에 보안에 취약하다는
+		단점이 존재한다.
+
+		반면, post 방식은 입력 된 데이터를 내부 HTTP 메세지 내부에 숨겨져서 전송 되기 때문에 get 방식에 비해 보안에 유리하다는 것을 알 수 있다.
+		(즉, post 방식은 외부로 노출되면 안되는 민감한 데이터를 전송 할 때 주로 활용된다는 것을 알 수 있다.)
+		-->
+		<form action="#" method="get">
+			<!--
+			input 태그는 사용자로부터 특정 데이터를 입력 받기 위한 역할을 수행한다. (즉, 해당 태그를 활용하면 여러 형태의 데이터를 사용자로부터
+			입력 받는 것이 가능하다는 것을 알 수 있다.)
+			-->
+			<input type="text">
+			<input type="password">
+			<input type="tel">
+			<input type="number">
+			<input type="url">
+			<input type="search">
+			<input type="email">
+			<input type="checkbox">
+			<input type="radio">
+			<input type="file">
+			<input type="button">
+			<input type="image" src="../../Resources/Example_13/E01Google_13.png">
+			<input type="hidden">
+			<input type="date">
+			<input type="datetime-local">
+			<input type="month">
+			<input type="week">
+			<input type="time">
+			<input type="range">
+			<input type="color">
+			<input type="submit">
+			<input type="reset">
+		</form>
+
+		<br>
+
+		<form action="#" method="get">
+			<label>
+				아이디 <input type="text">
+			</label>
+
+			<br>
+
+			<label for="userpw">비밀번호</label>
+			<input type="password" id="userpw">
+
+			<br>
+
+			<label for="username">
+				이름 <input type="text" id="username">
+			</label>
+		</form>
+
+		<br>
+
+		<form action="#" method="get">
+			<fieldset>
+				<legend>기본 정보</legend>
+
+				<label for="userid">아이디</label>
+				<input type="text" id="userid">
+
+				<br>
+
+				<label for="password">비밀번호</label>
+				<input type="password" id="password">
+			</fieldset>
+
+			<br>
+
+			<fieldset>
+				<legend>선택 정보</legend>
+
+				<label for="age">나이</label>
+				<input type="number" id="age">
+
+				<br>
+
+				<label for="recommender">추천인</label>
+				<input type="text" id="recommender">
+			</fieldset>
+		</form>
 	</body>
 </html>
