--- a/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
@@ -71,49 +71,89 @@
 		<br>
 
 		<form action="#" method="get">
-			<label>
-				아이디 <input type="text">
-			</label>
+			<!--
+			label 태그는 텍스트를 표현하는 역할을 수행한다. (즉, 해당 태그를 활용하면 여러 폼 태그의 이름을 명시하는 것이 가능하다.)
+			
+			또한, label 태그를 선택했을 때 폼 태그가 상호 작용하도록 하고 싶다면 for 속성을 이용해서 상호 작용 할 폼 태그의 식별자를
+			지정해주면 된다. (즉, label 태그가 선택 되면 for 속성에 지정 된 폼 태그가 반응하도록 하는게 가능하다는 것을 알 수 있다.)
+			-->
+			<label for="UserName">이름</label>
+			<input type="text" id="UserName">
+		</form>
 
-			<br>
+		<br>
 
-			<label for="userpw">비밀번호</label>
-			<input type="password" id="userpw">
+		<form action="#" method="get">
+			<!--
+			fieldset 태그는 폼 태그를 그룹화 시키는 역할을 수행한다. (즉, 해당 태그를 활용하면 여러 폼 태그를 그룹으로 묶어서 표현하는 것이
+			가능하다.)
+			-->
+			<fieldset>
+				<!--
+				legend 태그는 fieldset 태그로 묶여진 그룹에 이름을 명시하는 역할을 수행한다. (즉, 해당 태그를 활용하면 폼 태그 그룹의 가독성을
+				향상 시키는 것이 가능하다.)
+				-->
+				<legend>기본 정보</legend>
 
-			<br>
+				<label for="UserID">아이디</label>
+				<input type="text" id="UserID">
 
-			<label for="username">
-				이름 <input type="text" id="username">
-			</label>
+				<br>
+
+				<label for="UserPW">비밀번호</label>
+				<input type="password" id="UserPW">
+
+				<br>
+				<label for="City">지역</label>
+
+				<!--
+				select 태그는 콤보 박스를 생성하는 역할을 수행한다. (즉, 해당 태그를 활용하면 여러 텍스트를 나열 후 특정 텍스트를 선택 받는
+				콤보 박스를 표현하는 것이 가능하다.)
+
+				또한, 해당 태그에서 다중 선택을 지원하고 싶다면 multiple 속성을 명시하면 된다.
+
+				Ex)
+				<select name="City" multiple>
+				-->
+				<select name="City" id="City">
+					<!--
+					option 태그는 select 태그의 각 아이템을 표현하는 역할을 수행한다. (즉, 콤보 박스에 의해서 선택 될 선택 아이템은 해당
+					태그를 통해서 표현하는 것이 가능하다.)
+
+					또한, 여러 선택 아이템 중에 기본적으로 선택 되는 아이템을 지정하고 싶다면 selected 속성을 명시하면 된다. (즉, 해당 속성이
+					명시 된 아이템은 기본 선택 아이템이라는 것을 알 수 있다.)
+					-->
+					<option value="강북구" selected>강북구</option>
+					<option value="강남구">강남구</option>
+					<option value="서초구">서초구</option>
+					<option value="중원구">중원구</option>
+					<option value="분당구">분당구</option>
+				</select>
+			</fieldset>
 		</form>
 
 		<br>
 
 		<form action="#" method="get">
 			<fieldset>
-				<legend>기본 정보</legend>
+				<legend>좋아하는 과일</legend>
 
-				<label for="userid">아이디</label>
-				<input type="text" id="userid">
-
-				<br>
-
-				<label for="password">비밀번호</label>
-				<input type="password" id="password">
-			</fieldset>
-
-			<br>
-
-			<fieldset>
-				<legend>선택 정보</legend>
-
-				<label for="age">나이</label>
-				<input type="number" id="age">
+				<!--
+				선택 가능한 폼 태그에 checked 속성을 명시하면 해당 폼 태그를 선택 상태로 변경하는 것이 가능하다. (즉, 해당 속성을 활용해서
+				기본으로 선택 되어있는 폼 태그를 표현하는 것이 가능하다.)
+				-->
+				<input type="checkbox" id="Banana" checked>
+				<label for="Banana">바나나</label>
 
 				<br>
 
-				<label for="recommender">추천인</label>
-				<input type="text" id="recommender">
+				<input type="checkbox" id="Apple">
+				<label for="Apple">사과</label>
+
+				<br>
+
+				<input type="checkbox" id="Orange">
+				<label for="Orange">오렌지</label>
 			</fieldset>
 		</form>
 	</body>
