--- a/Framework/Web/Example/E01/Example/Classes/Example_11/E01Example_11.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_11/E01Example_11.html
@@ -13,7 +13,7 @@
 
 		또한, title 속성을 활용하면 링크에 대한 부가적인 정보를 표현하는 것이 가능하다.
 		-->
-		<a href="http://www.google.com" title="구글 사이트에 접속합니다.">구글 접속</a><br>
+		<a href="http://www.google.com" target="_blank">구글 접속</a><br>
 
 		<!--
 		img 태그는 이미지를 추가 할 때 사용하는 태그이다. (즉, 해당 태그를 활용하면 손쉽게 HTML 문서에 이미지를 추가하는 것이 가능하다.)
@@ -23,7 +23,7 @@
 		
 		a 태그 내부에 img 태그를 명시함으로서 특정 이미지를 클릭했을 때 다른 웹 문서가 열리도록 링크를 추가하는 것이 가능하다.
 		-->
-		<a href="http://www.google.com">
+		<a href="http://www.google.com" target="_blank" title="구글에 접속합니다.">
 			<img src="../../Resources/Example_11/E01Google_11.png">
 		</a><br>
 
