--- a/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
@@ -46,22 +46,11 @@
 			-->
 			<input type="text">
 			<input type="password">
-			<input type="tel">
 			<input type="number">
-			<input type="url">
-			<input type="search">
-			<input type="email">
 			<input type="checkbox">
 			<input type="radio">
 			<input type="file">
-			<input type="button">
-			<input type="image" src="../../Resources/Example_13/E01Google_13.png">
-			<input type="hidden">
 			<input type="date">
-			<input type="datetime-local">
-			<input type="month">
-			<input type="week">
-			<input type="time">
 			<input type="range">
 			<input type="color">
 			<input type="submit">
@@ -155,6 +144,16 @@
 				<input type="checkbox" id="Orange">
 				<label for="Orange">오렌지</label>
 			</fieldset>
+		</form>
+
+		<br>
+
+		<form action="#" method="get">
+			<!--
+			button 태그는 버튼을 생성하는 역할을 수행한다. (즉, 해당 태그를 활용하면 사용자의 선택에 따라 다양한 결과를 만들어내는 것이
+			가능하다.)
+			-->
+			<button type="submit">정보 입력 완료</button>
 		</form>
 	</body>
 </html>
