--- a/Framework/Web/Example/E01/Example/Classes/Example_15/E01Example_15.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_15/E01Example_15.html
@@ -4,13 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Practice</title>
+		<title>Example 15</title>
 	</head>
 	<body>
-		<h1>과제</h1>
-
-		<ul>
-			<li><a href="Classes/Practice_01/E01Practice_01.html">Practice_01</a></li>
-		</ul>
+		
 	</body>
 </html>
