--- a/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
@@ -18,7 +18,6 @@
 		- input
 		- label
 		- fieldset
-		- textarea
 		- select
 		- button
 
@@ -153,7 +152,15 @@
 			button 태그는 버튼을 생성하는 역할을 수행한다. (즉, 해당 태그를 활용하면 사용자의 선택에 따라 다양한 결과를 만들어내는 것이
 			가능하다.)
 			-->
-			<button type="submit">정보 입력 완료</button>
+			<button type="button" onclick="OnTouchBtn()">정보 입력 완료</button>
 		</form>
+
+		<script>
+			/** 버튼을 눌렀을 경우 */
+			function OnTouchBtn() {
+				var oUserNameInput = document.getElementById("UserName");
+				alert(oUserNameInput.value);
+			}
+		</script>
 	</body>
 </html>
