--- a/Framework/Web/Example/E01/Example/Classes/Example_14/E01Example_14.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_14/E01Example_14.html
@@ -20,6 +20,10 @@
 			autocomplete 속성은 자동 완성 여부를 설정하는 역할을 수행한다. (즉, 해당 속성을 활용하면 특정 데이터를 입력 받는 text 과 같은
 			입력 태그의 자동 완성 기능을 활성하거나 비활성하는 것이 가능하다.)
 			-->
+			<label for="Comment">
+				<input type="text" id="Comment" autocomplete="off">
+			</label>
+
 			<button type="button" id="AddCommentBtn" onclick="OnTouchAddItemBtn()">목록 추가</button>
 		</form>
 
