--- a/Framework/Web/Example/E01/Example/Classes/Example_10/E01Example_10.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_10/E01Example_10.html
@@ -26,7 +26,7 @@
 		<div class="Movie">
 			<p>영화 소개</p>
 			<p>영화를 소개하는 페이지입니다.</p>
-			<p>이번 영화의 <span>하이라이트</span> 장면은 바로 여기입니다.</p>
+			<p>이번 영화의 <span style="color:red">하이라이트</span> 장면은 바로 여기입니다.</p>
 		</div>
 
 		<div class="TV">
