--- a/Framework/Web/Example/E01/Example/Classes/Example_16/E01Example_16.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_16/E01Example_16.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Example 15</title>
+		<title>Example 16</title>
 	</head>
 	<body>
 		<form action="#" method="get">
@@ -24,12 +24,12 @@
 				</p>
 
 				<p>
-					<button type="button" onclick="OnTouchMemberShipBtn(true)">회원 가입</button>
-					<button type="button" onclick="OnTouchMemberShipBtn(false)">회원 정보 지우기</button>
+					<button type="button" onclick="OnTouchAddMemberBtn()">회원 가입</button>
+					<button type="button" onclick="OnTouchPrintAllMembersBtn()">모든 회원 보기</button>
 				</p>
 			</fieldset>
 		</form>
 
-		<script src="./E01Example_15.js"></script>
+		<script src="./E01Example_16.js"></script>
 	</body>
 </html>
