--- a/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_13/E01Example_13.html
@@ -159,6 +159,11 @@
 			/** 버튼을 눌렀을 경우 */
 			function OnTouchBtn() {
 				var oUserNameInput = document.getElementById("UserName");
+
+				/*
+				alert 함수는 알림 창을 출력하는 역할을 수행한다. (즉, 해당 함수를 활용하면 사용자의 입력에 따라 적절한 메세지를 출력하는
+				것이 가능하다.)
+				*/
 				alert(oUserNameInput.value);
 			}
 		</script>
