--- a/Framework/Web/Example/E01/Example/Classes/Example_14/E01Example_14.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_14/E01Example_14.html
@@ -35,6 +35,6 @@
 		다른 파일에 존재하는 자바 스크립트 명령문을 사용하고 싶다면 script 태그의 src 속성을 활용하면 된다. (즉, 해당 속성을 이용하면 별도의
 		파일에 작성 된 자바 스크립트 명령문을 현재 문서에 포함해서 사용하는 것이 가능하다.)
 		-->
-		<script src="./Scripts/E01Example_14.js"></script>
+		<script src="./E01Example_14.js"></script>
 	</body>
 </html>
