--- a/Framework/Web/Example/E01/Example/Classes/Example_16/E01Example_16.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_16/E01Example_16.html
@@ -26,6 +26,7 @@
 				<p>
 					<button type="button" onclick="OnTouchAddMemberBtn()">회원 가입</button>
 					<button type="button" onclick="OnTouchPrintAllMembersBtn()">모든 회원 보기</button>
+					<button type="button" onclick="localStorage.clear()">모든 회원 지우기</button>
 				</p>
 			</fieldset>
 		</form>
