--- a/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
@@ -1,3 +1,15 @@
+<!--
+CSS 는 크게 선택자와 선언부로 이루어져있다.
+
+선택자는 CSS 를 적용 할 대상을 명시하는 영역을 의미하며, 선언부는 적용 할 스타일을 명시하는 영역을 의미한다. (즉, HTML 의 특정 태그가 CSS 의
+선택자에 명시되어있다면 CSS 의 스타일이 적용된다는 것을 알 수 있다.)
+
+CSS 선택자 종류
+- 기본 선택자 (전체, 태그, 아이디, 클래스, 속성)
+- 조합 선택자 (그룹, 자식, 하위, 인접 형제, 일반 형제)
+- 가상 클래스 선택자 (링크, 동적, 입력 요소, 구조)
+- 기타 선택자 (가상 요소)
+-->
 <!DOCTYPE html>
 <html lang="ko">
 	<head>
@@ -7,6 +19,68 @@
 		<title>Example 17</title>
 	</head>
 	<body>
-		<p>Hello, World!</p>
+		<h1>전체 선택자</h1>
+		
+		<p>
+			태그 선택자는 태그명과 일치하는 태그를 모두 선택합니다.<br>따라서 모든 p 태그의 텍스트 색상은 파란색이 됩니다.
+		</p>
+
+		<p id="ID">
+			아이디 선택자는 id 속성값을 이용해서 선택자를 지정하는 방법입니다.<br>
+			따라서 해당 p 태그는 아이디 선택자에 의해서 초록색이 됩니다.
+		</p>
+
+		<p class="Red">
+			클래스 선택자는 class 속성값을 이용해서 선택자를 지정하는 방법입니다.
+		</p>
+
+		<p class="Magenta">
+			따라서 해당 p 태그는 자홍색이 됩니다.
+		</p>
+
+		<a href="http://www.google.com">속성 선택자는 태그의 속성을 이용해서 선택자를 지정하는 방법입니다.</a>
+
+		<style>
+			/*
+			전체 선택자는 기본 스타일을 적용하는 역할을 수행한다. (즉, CSS 의 선언부에 명시되어있지 않은 태그는 전체 선택자의 스타일이 적용
+			된다는 것을 알 수 있다.)
+			*/
+			* {
+				color: red;
+			}
+
+			/*
+			태그 선택자
+			*/
+			p {
+				color: blue;
+			}
+
+			/*
+			아이디 선택자
+			*/
+			#ID {
+				color:green;
+			}
+
+			/*
+			클래스 선택자
+			*/
+			.Red {
+				color:red;
+			}
+
+			.Magenta {
+				color: magenta;
+			}
+
+			/*
+			속성 선택자
+			*/
+			a[href] {
+				color: red;
+				display: block;
+			}
+		</style>
 	</body>
 </html>
