--- a/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_17/E01Example_17.html
@@ -19,6 +19,11 @@ CSS 선택자 종류
 		<title>Example 17</title>
 	</head>
 	<body>
+		<!--
+		기본 선택자란?
+		- 가장 많이 활용되는 선택자로서 나머지 선택자들은 기본 선택자를 응용해서 사용되는 특징이 존재한다. (즉, 기본 선택자는 다른 선택자의
+		기본이 된다는 것을 알 수 있다.)
+		-->
 		<h1>전체 선택자</h1>
 		
 		<p>
