--- a/Framework/Web/Example/E01/Example/Classes/Example_18/E01Example_18.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_18/E01Example_18.html
@@ -7,6 +7,11 @@
 		<title>Example 18</title>
 	</head>
 	<body>
+		<!--
+		조합 선택자란?
+		- 기본 선택자를 조합함으로서 선택자의 기능을 더 확장시키는 역할을 수행하는 선택자를 의미한다. (즉, 그룹 선택자는 기본 선택자의 적용
+		범위를 제어한다는 것을 알 수 있다.)
+		-->
 		<h1>
 			그룹 선택자
 		</h1>
