--- a/Framework/Web/Example/E01/Practice/Classes/Practice_08/P01Practice_08.html
+++ b/Framework/Web/Example/E01/Practice/Classes/Practice_08/P01Practice_08.html
@@ -26,6 +26,7 @@
 				<p>
 					<button type="button" onclick="OnTouchSigninBtn()">로그인</button>
 					<button type="button" onclick="OnTouchSignupBtn()">회원 가입</button>
+					<button type="button" onclick="OnTouchClearAllMembersBtn()">모든 회원 지우기</button>
 				</p>
 			</fieldset>
 		</form>
@@ -33,23 +34,24 @@
 		<script>
 			/** 로그인 버튼을 눌렀을 경우 */
 			function OnTouchSigninBtn() {
-				var oID = GetInputVal("ID");
-				var oPassword = GetInputVal("Password");
+				var oIDInput = document.getElementById("ID");
+				var oPasswordInput = document.getElementById("Password");
 
 				// 입력 필드가 비어있을 경우
-				if(oID.length <= 0 || oPassword.length <= 0) {
-					alert("아이디와 패스워드를 입력해주세요.");
+				if(oIDInput.value.length <= 0 || oPasswordInput.value.length <= 0) {
+					alert("아이디와 비밀번호를 입력해주세요.");
 					return;
 				}
 
 				var oMemberList = P01LoadMembers_08();
-				var nResult = P01FindMember_08(oMemberList, oID);
+				var nResult = P01FindMember_08(oMemberList, oIDInput.value);
 
-				// 회원이 아닐 경우
-				if(nResult < 0) {
-					alert("아이디와 패스워드를 확인해주세요.");
+				// 로그인이 불가능 할 경우
+				if(nResult < 0 || oMemberList[nResult].m_oPassword != oPasswordInput.value) {
+					alert("아이디 또는 비밀번호를 확인해주세요.");
 				} else {
-					window.location.href = "./P01Members_08.html";
+					localStorage.setItem("SigninID", oIDInput.value);
+					window.location.href = "./P01Signin_08.html";
 				}
 			}
 
@@ -58,9 +60,13 @@
 				localStorage.setItem("ModifyID", "");
 				window.location.href = "./P01Signup_08.html";
 			}
-		</script>
 
-		<script src="./P01Func_08.js"></script>
+			/** 모든 회원 지우기 버튼을 눌렀을 경우 */
+			function OnTouchClearAllMembersBtn() {
+				localStorage.clear();
+			}
+		</script>
+		
 		<script src="./P01Member_08.js"></script>
 	</body>
 </html>
