--- a/Framework/Web/Example/E01/Example/Classes/Example_20/E01Example_20.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_20/E01Example_20.html
@@ -12,10 +12,10 @@
 		- 특정 태그의 위치나 다른 태그와의 관계를 통해 스타일을 적용 할 수 있는 선택자를 의미한다.
 
 		주요 구조적 가상 클래스 선택자 종류
-		- first-child / last-child					<- 부모 요소에서 처음 or 마지막 에 등장하는 요소에 스타일 적용
-		- first-of-type / last-of-type				<- 부모 요소에서 처음 or 마지막 에 등장하는 요소에 스타일 적용
-		- nth-child / nth-last-child				<- 부모 요소에서 처음 or 마지막 에서 N 번째 순서에 등장하는 요소에 스타일 적용
-		- nth-of-type / nth-last-of-type			<- 부모 요소에서 처음 or 마지막 에서 N 번째 순서에 등장하는 요소에 스타일 적용
+		- first-child / last-child			<- 부모 요소에서 처음 or 마지막 에 등장하는 요소에 스타일 적용
+		- first-of-type / last-of-type		<- 부모 요소에서 처음 or 마지막 에 등장하는 요소에 스타일 적용
+		- nth-child / nth-last-child		<- 부모 요소에서 처음 or 마지막 에서 N 번째 순서에 등장하는 요소에 스타일 적용
+		- nth-of-type / nth-last-of-type	<- 부모 요소에서 처음 or 마지막 에서 N 번째 순서에 등장하는 요소에 스타일 적용
 
 		Child 계열 선택자 vs Type 계열 선택자
 		- Child 계열 선택자는 단순히 부모 요소를 기준으로 자식 태그의 순서만을 기준으로 스타일을 적용하는 반면, Type 계열 선택자는 부모 요소를
@@ -41,6 +41,8 @@
 				<p>구조적 가상 클래스 선택자 - 3</p>
 				<p>구조적 가상 클래스 선택자 - 4</p>
 			</div>
+			
+			<p>구조적 가상 클래스 선택자 - 5</p>
 		</div>
 
 		<style>
