--- a/Framework/Web/Example/E01/Practice/index.html
+++ b/Framework/Web/Example/E01/Practice/index.html
@@ -10,6 +10,7 @@
 		<h1>과제</h1>
 		<ul>
 			<li><a href="Classes/Practice_01/P01Practice_01.html">Practice_01</a></li>
+			<li><a href="Classes/Practice_02/P01Practice_02.html">Practice_02</a></li>
 			<li><a href="Classes/Practice_08/P01Practice_08.html">Practice_08</a></li>
 		</ul>
 	</body>
