--- a/Framework/Web/Example/E01/Example/Classes/Example_24/E01Example_24.html
+++ b/Framework/Web/Example/E01/Example/Classes/Example_24/E01Example_24.html
@@ -25,6 +25,7 @@
 		- animation-timing-function		<- 이징 설정
 		-->
 		<div></div>
+
 		<button type="button" id="Start">시작</button>
 		<button type="button" id="Pause">정지</button>
 
@@ -52,6 +53,10 @@
 				animation-timing-function: linear;
 				animation-iteration-count: infinite;
 				animation-direction: alternate;
+			}
+
+			button {
+				margin-top: 5px;
 			}
 
 			@keyframes move {
